ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress-deploy-k8s-route53-dns
  namespace: cert-manager
  annotations:
    kubernetes.io/ingress.class: voyager
    certmanager.k8s.io/cluster-issuer: "cert-manager-cluster-issuer"
    certmanager.k8s.io/acme-challenge-type: dns01
spec:
  tls:
    - hosts:
        - ingress.mflyyou.com
      secretName: certificate-secret
  rules:
    - host: ingress.mflyyou.com
      http:
        paths:
          - backend:
              service:
                name: nginx
                port:
                  number: 80
            path: /
            pathType: Prefix
